# smt-compiler-oracle

./: CMakeLists.txt  EVALUATION_README.md  LICENSE  README.md  gather_stats.py  plot_matrics.py  strip_traps.py  test_z3  test_z3.cpp
OraclePass/: OraclePass.cpp  Z3Encoder.cpp  Z3Encoder.h
benchmarks/: 1.c  10.c  2.c  3.c  4.c  5.c  6.c  8.c  9.c
benchmarks/1/: 1.c  1.ll  1_idealized.c  1_idealized.ll
benchmarks/10/: 10.c  10.ll  10_idealized.c  10_idealized.ll
benchmarks/2/: 2.c  2.ll  2_idealized.c  2_idealized.ll
benchmarks/3/: 3.c  3.ll  3_idealized.c  3_idealized.ll
benchmarks/4/: 4.c  4.ll  4_idealized.c  4_idealized.ll
benchmarks/5/: 5.ll  5_idealized.c  5_idealized.ll
benchmarks/6/: 6.c  6.ll  6_idealized.c  6_idealized.ll
benchmarks/7/: 7.c  7.ll  7_idealized.c  7_idealized.ll
benchmarks/8/: 8.c  8.ll  8_idealized.c  8_idealized.ll
benchmarks/9/: 9.ll  9_idealized.c  9_idealized.ll
evaluation/lz4/: bench_lz4.c  generate_baseline.sh  generate_integer_baseline.sh  lz4_bounds_O3.ll  lz4_integer_O3.ll  lz4_strict_O3.ll  lz4_strict_trap_free_O3.ll  lz4_trap_free_O3.ll  run_baseline  run_oracle  run_strict_baseline  run_strict_oracle
evaluation/openssl/: sha256_bounds_O3.ll  sha256_bounds_trap_free_O3.ll  sha256_integer_O3.ll  sha256_trap_free_O3.ll
evaluation/polybench/: generate_polybench_baseline.sh  jacobi2d_traps_O3.ll
evaluation/zlib/: deflate_bounds_O3.ll  deflate_bounds_trap_free_O3.ll  deflate_integer_O3.ll  (+3 more)
logs/: bench_logs.txt  lz4_first_trap_context.txt  lz4_runtime_results.txt  lz4_strict_runtime_results.txt
(+7 files in other folders)
